@@ -1,3 +1,4 @@
+Build a fraction: Changed background to white
 # 0.00.66 (64062) May 9, 2012
 Build a fraction: Hide the denominator dotted line when the user is dragging 0
 Build a fraction: Prevent putting 0 in denominator, prevent putting a number in numerator or denominator if already filled
